# CV_Project

./: CMakeLists.txt  CV_Project.cpp  CV_Project.vcxproj  CV_Project.vcxproj.filters  README.txt  Utility.cpp  Utility.h  court_detection.cpp  court_detection.h  functions.py  header.h  hw_field.cpp  main.cpp  main.py  player_clustering.cpp  player_detection.cpp  player_detection.h  player_segmentation_robustness.cpp  segmentation.cpp  segmentation.h  write_results.cpp  write_results.h
1 Train-Detect/: ReadME.txt  functions.py  main.py
2 Classify-Segment-Eval/: ReadMe.txt  main.cpp
2 Classify-Segment-Eval/headers/: Utility.h  court_detection.h  header.h  player_detection.h
2 Classify-Segment-Eval/implementations/: court_detection_part2.cpp  eval_bb.cpp  eval_seg.cpp  player_clustering.cpp  player_detection.cpp  player_segmentation_robustness.cpp  utility_class_rect.cpp  utility_write_seg.cpp
Extra/Predictions/: im10_bb.txt  im11_bb.txt  im12_bb.txt  im1_bb.txt  im2_bb.txt  im3_bb.txt  im4_bb.txt  im5_bb.txt  im6_bb.txt  im7_bb.txt  im8_bb.txt  im9_bb.txt
Extra/ProcessedBoxes/: im1.txt  im10.txt  im11.txt  im12.txt  im2.txt  im3.txt  im4.txt  im5.txt  im6.txt  im7.txt  im8.txt  im9.txt
Predictions/: im10_bb.txt  im11_bb.txt  im12_bb.txt  im13_bb.txt  im14_bb.txt  im15_bb.txt  im1_bb.txt  im2_bb.txt  im3_bb.txt  im4_bb.txt  im5_bb.txt  im6_bb.txt  im7_bb.txt  im8_bb.txt  im9_bb.txt
ProcessedBoxes/: im1.txt  im10.txt  im11.txt  im12.txt  im13.txt  im14.txt  im15.txt  im2.txt  im3.txt  im4.txt  im5.txt  im6.txt  im7.txt  im8.txt  im9.txt
headers/: Eval.h  Utility.h  court_detection.h  player_detection.h  segmentation.h  write_results.h
implementations/: Eval.cpp  Utility.cpp  court_detection.cpp  court_detection_part1.cpp  court_detection_part2.cpp  eval_bb.cpp  eval_seg.cpp  hw_field.cpp  player_clustering.cpp  player_detection.cpp  player_segmentation_robustness.cpp  segmentation.cpp  utility_class_rect.cpp  utility_write_seg.cpp  write_results.cpp
